[Profile] count profile in a sport
