# app/account/profile/Profile.route.ts
@@ -8,6 +8,7 @@ export const ProfileRoute: express.Router = express.Router()
     .get("/", ProfileController.All)
     .get("/byUser/:idUser", [ UserExist ], ProfileController.AllByPlayer)
     .get("/best/:sport/:take*?/:skip*?", [ SportExist ], ProfileController.Best)
+    .get("/count/:sport", [ SportExist ], ProfileController.Count)
     .get("/:idProfile", [ ProfileExist ], ProfileController.Find)
     .get("/:idUser/:sport", [ UserExist, SportExist ], ProfileController.FindByUserAndSport)
     .put("/:idProfile", [ ProfileExist, OptionnalSportExist ], ProfileController.Update)
